Try to fix letter spacing again

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -52,7 +52,6 @@ html {
 	font-size: 100%;
 	height: 100%;
 	position: relative;
-	letter-spacing: 1px;
 }
 
 body { 
@@ -60,6 +59,7 @@ body {
 	padding: 50px 0 50px 0;
 	font-family: "Cabin";
 	font-size: 0.875em;
+	letter-spacing: 0.5px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -71,6 +71,7 @@ body {
 h1, h2, h3,
 h4, h5, h6, .headText {
 	font-family: "Roboto Slab";
+	letter-spacing: 1px;
 }
 
 h1 {
@@ -90,12 +91,14 @@ h4 {
 }
 
 .buttonFont {
-	font-family: "Jaapokki Regular"
+	font-family: "Jaapokki Regular";
+	letter-spacing: 1px;
 }
 
 .menuFont {
 	font-family: "Jaapokki Regular";
 	font-size: 125%;
+	letter-spacing: 1px;
 }
 
 .img-responsive {
@@ -371,6 +374,7 @@ footer p {
 	vertical-align: middle;
 	font-family: "Roboto Slab";
 	margin: 0 auto;
+	letter-spacing: 1px;
 }
 
 /*----------------*\
